[project]
name = "dark-souls-death-tracker"
version = "3.0.0"
description = "Оверлей для отображения счётчика смертей (работает с DSDeaths)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pywin32>=306",
]

[project.scripts]
death-tracker = "main:main"

[tool.uv]
dev-dependencies = []
